[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/task/task_detail.gd" type="Script" id=1]

[node name="TaskDetailPopup" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 0 )
custom_constants/scaleborder_size = 6
custom_constants/title_height = 40
popup_exclusive = true
window_title = "Edit task"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBorder" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VLayout" type="VBoxContainer" parent="PanelBorder"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 771.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="BodyContainer" type="PanelContainer" parent="PanelBorder/VLayout"]
margin_right = 1010.0
margin_bottom = 506.0

[node name="Padding" type="MarginContainer" parent="PanelBorder/VLayout/BodyContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 499.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 10
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="PanelBorder/VLayout/BodyContainer/Padding"]
margin_left = 10.0
margin_top = 15.0
margin_right = 986.0
margin_bottom = 477.0
custom_constants/separation = 20

[node name="NameFields" type="VBoxContainer" parent="PanelBorder/VLayout/BodyContainer/Padding/Rows"]
margin_right = 976.0
margin_bottom = 42.0

[node name="TaskIdLabel" type="Label" parent="PanelBorder/VLayout/BodyContainer/Padding/Rows/NameFields"]
margin_right = 976.0
margin_bottom = 14.0
text = "Task #000"

[node name="NameEdit" type="LineEdit" parent="PanelBorder/VLayout/BodyContainer/Padding/Rows/NameFields"]
margin_top = 18.0
margin_right = 976.0
margin_bottom = 42.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="DescFields" type="VBoxContainer" parent="PanelBorder/VLayout/BodyContainer/Padding/Rows"]
margin_top = 62.0
margin_right = 976.0
margin_bottom = 462.0
rect_min_size = Vector2( 0, 400 )

[node name="DescLabel" type="Label" parent="PanelBorder/VLayout/BodyContainer/Padding/Rows/DescFields"]
margin_right = 976.0
margin_bottom = 14.0
text = "Description: "

[node name="DescEdit" type="TextEdit" parent="PanelBorder/VLayout/BodyContainer/Padding/Rows/DescFields"]
margin_top = 18.0
margin_right = 976.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 160 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlsContainer" type="PanelContainer" parent="PanelBorder/VLayout"]
margin_top = 506.0
margin_right = 1010.0
margin_bottom = 570.0

[node name="Padding" type="MarginContainer" parent="PanelBorder/VLayout/ControlsContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 57.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 10
custom_constants/margin_bottom = 15

[node name="TaskButtonsContainer" type="HBoxContainer" parent="PanelBorder/VLayout/ControlsContainer/Padding"]
margin_left = 10.0
margin_top = 15.0
margin_right = 986.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="SaveTaskButton" type="Button" parent="PanelBorder/VLayout/ControlsContainer/Padding/TaskButtonsContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PushRightContainer" type="HBoxContainer" parent="PanelBorder/VLayout/ControlsContainer/Padding/TaskButtonsContainer"]
margin_left = 45.0
margin_right = 976.0
margin_bottom = 20.0
size_flags_horizontal = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteTaskButton" type="Button" parent="PanelBorder/VLayout/ControlsContainer/Padding/TaskButtonsContainer/PushRightContainer"]
margin_left = 846.0
margin_right = 931.0
margin_bottom = 20.0
hint_tooltip = "Delete this task"
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Delete task"

[node name="ActivityContainer" type="PanelContainer" parent="PanelBorder/VLayout"]
margin_top = 570.0
margin_right = 1010.0
margin_bottom = 764.0
size_flags_vertical = 3

[node name="Padding" type="MarginContainer" parent="PanelBorder/VLayout/ActivityContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 187.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 15
custom_constants/margin_left = 19
custom_constants/margin_bottom = 19

[node name="ActivityFormContainer" type="VBoxContainer" parent="PanelBorder/VLayout/ActivityContainer/Padding"]
margin_left = 19.0
margin_top = 15.0
margin_right = 986.0
margin_bottom = 161.0

[node name="AddActivityLabel" type="Label" parent="PanelBorder/VLayout/ActivityContainer/Padding/ActivityFormContainer"]
margin_right = 967.0
margin_bottom = 14.0
text = "Add activity"

[node name="ActivityEntry" type="HBoxContainer" parent="PanelBorder/VLayout/ActivityContainer/Padding/ActivityFormContainer"]
margin_top = 18.0
margin_right = 967.0
margin_bottom = 42.0

[node name="ActivitEntryField" type="LineEdit" parent="PanelBorder/VLayout/ActivityContainer/Padding/ActivityFormContainer/ActivityEntry"]
margin_right = 864.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SaveActivityButton" type="Button" parent="PanelBorder/VLayout/ActivityContainer/Padding/ActivityFormContainer/ActivityEntry"]
margin_left = 868.0
margin_right = 967.0
margin_bottom = 24.0
text = " Save activity "

[node name="ScrollContainer" type="ScrollContainer" parent="PanelBorder/VLayout/ActivityContainer/Padding/ActivityFormContainer"]
margin_top = 46.0
margin_right = 967.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 3

[node name="ActivityEntries" type="VBoxContainer" parent="PanelBorder/VLayout/ActivityContainer/Padding/ActivityFormContainer/ScrollContainer"]
margin_right = 967.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
